tests/ui/pattern/non-structural-match-types.stderr
error: `{closure@$DIR/non-structural-match-types.rs:9:17: 9:19}` cannot be used in patterns
  --> $DIR/non-structural-match-types.rs:9:9
   |
LL |         const { || {} } => {},
   |         ^^^^^^^^^^^^^^^

error: `{async block@$DIR/non-structural-match-types.rs:12:17: 12:25}` cannot be used in patterns
  --> $DIR/non-structural-match-types.rs:12:9
   |
LL |         const { async {} } => {},
   |         ^^^^^^^^^^^^^^^^^^

error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/non-structural-match-types.rs:8:11
   |
LL |     match loop {} {
   |           ^^^^^^^ pattern `_` not covered
   |
   = note: the matched value is of type `{closure@$DIR/non-structural-match-types.rs:9:17: 9:19}`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL |         const { || {} } => {}, _ => todo!(),
   |                              ++++++++++++++

error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/non-structural-match-types.rs:11:11
   |
LL |     match loop {} {
   |           ^^^^^^^ pattern `_` not covered
   |
   = note: the matched value is of type `{async block@$DIR/non-structural-match-types.rs:12:17: 12:25}`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL |         const { async {} } => {}, _ => todo!(),
   |                                 ++++++++++++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0004`.
